@@ -1,3 +1,9 @@
+2014-09-13  Christoph Redl <redl@kr.tuwien.ac.at>
+	* build_potassco.sh: Upgrade to clasp 3.1.0 and gringo 4.4.0.
+	* checkout_build_potassco.sh: Likewise.
+	* bootstrap-extra.sh: Likewise.
+	* bootstrap-windows.sh: Upgrade to clasp 3.1.0.
+
 2014-09-10  Christoph Redl <redl@kr.tuwien.ac.at>
 	* src/PythonPlugin.cpp: Prepare Python-interface for plugins.
 	* include/dlvhex2/PythonPlugin.h: Likewise.
